changed h5 to p and fixed the color contrast

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ h1 {
   font-family: 'Montserrat';
   font-size: 16px;
   font-weight: bolder;
-  color: #FDDFE7;
+  color: gold;
   text-decoration: none;
 }
 .feature-text-container{
@@ -306,7 +306,7 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-h5 {
+.red-icon-text {
   display: flex;
   font-family: 'Montserrat';
   font-size: 11px;
@@ -467,7 +467,6 @@ h5 {
     background-image: url(images/feature-desktop.png);
     background-size: contain;
     font-size: 28px;
-    color: #FFFFFF;
   }
   .feature-text-container{
     display: flex;
@@ -530,7 +529,7 @@ h5 {
   .skills-list {
     margin: 0px 40px;
   }
-  h5 {
+  .red-icon-text {
     font-size: 25px;
     margin-top: 10px;
   }
